--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+	<meta charset="UTF-8">
+	<title>Caps Locker</title>
+	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'><link rel="stylesheet" href="./design.css">
+	<link rel="icon" type="image/png" href="https://i.imgur.com/G6ixmmh.png"/>
+	<div class="header"><h4>Image Credit: <a href="https://www.etsy.com/au/shop/CapsuleDesignShop" target="_blank">CapsuleDesignShop - Etsy</a></h4></div>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+  <div class="main-wrapper">
+	<div class="header"><h1>Caps Locker</h1></div>
+	<div id="vue">
+		<cart :cart="cart" :cart-total="cartTotal" :checkout-bool="checkoutBool"></cart>
+		<caps :cart="cart" :cart-total="cartTotal" :caps-data="capsData"></caps>
+		<checkout-section v-if="checkoutBool" :cart="cart" :cart-total="cartTotal" :caps-data="capsData" </checkout-section>
+	</div>
+  </div>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.11/vue.js'></script><script  src="./vue.js"></script>
   </body>
-</html>
+  </html>
